@@ -65,6 +65,8 @@ Bugs fixed
 * #9250: autodoc: The inherited method not having docstring is wrongly parsed
 * #9283: autodoc: autoattribute directive failed to generate document for an
   attribute not having any comment
+* #9364: autodoc: single element tuple on the default argument value is wrongly
+  rendered
 * #9317: html: Pushing left key causes visiting the next page at the first page
 * #9270: html theme : pyramid theme generates incorrect logo links
 * #9217: manpage: The name of manpage directory that is generated by
